Fix home page counter spacing issue

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -31,6 +31,7 @@
     font-size: 5.8rem;
     color: var(--color-main);
     margin-bottom: 0;
+    line-height: 6rem;
 }
 
 .home-leaderboard .leaderboard-item-wrapper {
